# pcc

./: CMakeLists.txt  config.h
cc/cc/: cc.c
cc/cxxcom/: scan.l
cmake/Modules/: GetTriple.cmake
